--- a/posts/2016/02/02/Layout/index.html
+++ b/posts/2016/02/02/Layout/index.html
@@ -3,21 +3,20 @@
 <head>
     <meta charset="utf-8">
     
-    <title>Technical Reading | Pinggeek</title>
+    <title>Layout | Pinggeek</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     
         <meta name="keywords" content="" />
     
     <meta name="description">
 <meta property="og:type" content="article">
-<meta property="og:title" content="Technical Reading">
-<meta property="og:url" content="http://yoursite.com/2016/02/01/Technical-Reading/index.html">
+<meta property="og:title" content="Layout">
+<meta property="og:url" content="http://yoursite.com/posts/2016/02/02/Layout/index.html">
 <meta property="og:site_name" content="Pinggeek">
 <meta property="og:description">
-<meta property="og:image" content="http://yoursite.com/images/iPad.png">
-<meta property="og:updated_time" content="2016-02-01T14:59:19.000Z">
+<meta property="og:updated_time" content="2016-02-02T09:12:26.000Z">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="Technical Reading">
+<meta name="twitter:title" content="Layout">
 <meta name="twitter:description">
 
     
@@ -99,31 +98,30 @@
                         <div class="main-body-header">
     <h1 class="header">
     
-    <a class="page-title-link" href="/categories/Technical/">Technical</a>
+    uncategorized
     </h1>
 </div>
                         <div class="main-body-content">
-                            <article id="post-Technical-Reading" class="article article-single article-type-post" itemscope itemprop="blogPost">
+                            <article id="post-Layout" class="article article-single article-type-post" itemscope itemprop="blogPost">
     <div class="article-inner">
         
             <header class="article-header">
                 
     
         <h1 class="article-title" itemprop="name">
-        Technical Reading
+        Layout
         </h1>
     
 
             </header>
         
         <p class="article-byline">
-            <a href="/2016/02/01/Technical-Reading/" class="article-date">
-    <time datetime="2016-02-01T08:37:48.000Z" itemprop="datePublished">2016-02-01</time>
+            <a href="/posts/2016/02/02/Layout/" class="article-date">
+    <time datetime="2016-02-02T09:12:26.000Z" itemprop="datePublished">2016-02-02</time>
 </a>
         </p>
         <div class="article-entry" itemprop="articleBody">
-            <p><img src="/images/iPad.png" alt=""></p>
-
+            
         </div>
         <footer class="article-footer">
             
@@ -198,7 +196,7 @@
 var disqus_shortname = 'github-hexo-pinggeek';
 
 
-var disqus_url = 'http://yoursite.com/2016/02/01/Technical-Reading/';
+var disqus_url = 'http://yoursite.com/posts/2016/02/02/Layout/';
 
 (function() {
 var dsq = document.createElement('script');
@@ -273,20 +271,20 @@ dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
         
 <nav id="article-nav">
     
-        <a href="/2016/02/02/Objective-C/" id="article-nav-newer" class="article-nav-link-wrap">
+        <a href="/posts/2016/02/02/Hexo-configuration/" id="article-nav-newer" class="article-nav-link-wrap">
         <strong class="article-nav-caption">newer</strong>
         <p class="article-nav-title">
         
-            Objective-C
+            Hexo configuration
         
         </p>
         <i class="icon fa fa-chevron-right" id="icon-chevron-right"></i>
     </a>
     
     
-        <a href="/2016/02/01/My-New-Post/" id="article-nav-older" class="article-nav-link-wrap">
+        <a href="/posts/2016/02/02/Objective-C/" id="article-nav-older" class="article-nav-link-wrap">
         <strong class="article-nav-caption">older</strong>
-        <p class="article-nav-title">My New Post</p>
+        <p class="article-nav-title">Objective-C</p>
         <i class="icon fa fa-chevron-left" id="icon-chevron-left"></i>
         </a>
     
@@ -305,7 +303,43 @@ dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
                     <li>
                         
                         <div class="item-thumbnail">
-                            <a href="/2016/02/02/Objective-C/" class="thumbnail">
+                            <a href="/posts/2016/02/02/Hexo-configuration/" class="thumbnail">
+    
+    
+        <span class="thumbnail-image thumbnail-none"></span>
+    
+</a>
+                        </div>
+                        
+                        <div class="item-inner">
+                            <p class="item-category"></p>
+                            <p class="item-title"><a href="/posts/2016/02/02/Hexo-configuration/" class="title">Hexo configuration</a></p>
+                            <p class="item-date"><time datetime="2016-02-02T10:16:32.000Z" itemprop="datePublished">2016-02-02</time></p>
+                        </div>
+                    </li>
+                
+                    <li>
+                        
+                        <div class="item-thumbnail">
+                            <a href="/posts/2016/02/02/Layout/" class="thumbnail">
+    
+    
+        <span class="thumbnail-image thumbnail-none"></span>
+    
+</a>
+                        </div>
+                        
+                        <div class="item-inner">
+                            <p class="item-category"></p>
+                            <p class="item-title"><a href="/posts/2016/02/02/Layout/" class="title">Layout</a></p>
+                            <p class="item-date"><time datetime="2016-02-02T09:12:26.000Z" itemprop="datePublished">2016-02-02</time></p>
+                        </div>
+                    </li>
+                
+                    <li>
+                        
+                        <div class="item-thumbnail">
+                            <a href="/posts/2016/02/02/Objective-C/" class="thumbnail">
     
     
         <span style="background-image:url(http://7xivmb.com1.z0.glb.clouddn.com/smile33.jpg)" alt="Objective-C" class="thumbnail-image"></span>
@@ -315,7 +349,7 @@ dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
                         
                         <div class="item-inner">
                             <p class="item-category"></p>
-                            <p class="item-title"><a href="/2016/02/02/Objective-C/" class="title">Objective-C</a></p>
+                            <p class="item-title"><a href="/posts/2016/02/02/Objective-C/" class="title">Objective-C</a></p>
                             <p class="item-date"><time datetime="2016-02-01T13:02:17.000Z" itemprop="datePublished">2016-02-02</time></p>
                         </div>
                     </li>
@@ -323,7 +357,7 @@ dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
                     <li>
                         
                         <div class="item-thumbnail">
-                            <a href="/2016/02/01/Technical-Reading/" class="thumbnail">
+                            <a href="/posts/2016/02/01/Technical-Reading/" class="thumbnail">
     
     
         <span style="background-image:url(/images/iPad.png)" alt="Technical Reading" class="thumbnail-image"></span>
@@ -333,7 +367,7 @@ dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
                         
                         <div class="item-inner">
                             <p class="item-category"><a class="article-category-link" href="/categories/Technical/">Technical</a></p>
-                            <p class="item-title"><a href="/2016/02/01/Technical-Reading/" class="title">Technical Reading</a></p>
+                            <p class="item-title"><a href="/posts/2016/02/01/Technical-Reading/" class="title">Technical Reading</a></p>
                             <p class="item-date"><time datetime="2016-02-01T08:37:48.000Z" itemprop="datePublished">2016-02-01</time></p>
                         </div>
                     </li>
@@ -341,7 +375,7 @@ dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
                     <li>
                         
                         <div class="item-thumbnail">
-                            <a href="/2016/02/01/My-New-Post/" class="thumbnail">
+                            <a href="/posts/2016/02/01/My-New-Post/" class="thumbnail">
     
     
         <span style="background-image:url(http://ww1.sinaimg.cn/large/81b78497jw1enhkcat9mqj20go06g0sy.jpg)" alt="My New Post" class="thumbnail-image"></span>
@@ -351,44 +385,8 @@ dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
                         
                         <div class="item-inner">
                             <p class="item-category"><a class="article-category-link" href="/categories/Sports/">Sports</a><i class="icon fa fa-angle-right"></i><a class="article-category-link" href="/categories/Sports/Baseball/">Baseball</a></p>
-                            <p class="item-title"><a href="/2016/02/01/My-New-Post/" class="title">My New Post</a></p>
+                            <p class="item-title"><a href="/posts/2016/02/01/My-New-Post/" class="title">My New Post</a></p>
                             <p class="item-date"><time datetime="2016-02-01T08:22:41.000Z" itemprop="datePublished">2016-02-01</time></p>
-                        </div>
-                    </li>
-                
-                    <li>
-                        
-                        <div class="item-thumbnail">
-                            <a href="/2016/02/01/hello-world/" class="thumbnail">
-    
-    
-        <span class="thumbnail-image thumbnail-none"></span>
-    
-</a>
-                        </div>
-                        
-                        <div class="item-inner">
-                            <p class="item-category"></p>
-                            <p class="item-title"><a href="/2016/02/01/hello-world/" class="title">Hello World</a></p>
-                            <p class="item-date"><time datetime="2016-01-31T13:23:35.000Z" itemprop="datePublished">2016-02-01</time></p>
-                        </div>
-                    </li>
-                
-                    <li>
-                        
-                        <div class="item-thumbnail">
-                            <a href="/2013/07/13/Test-Post/" class="thumbnail">
-    
-    
-        <span class="thumbnail-image thumbnail-none"></span>
-    
-</a>
-                        </div>
-                        
-                        <div class="item-inner">
-                            <p class="item-category"><a class="article-category-link" href="/categories/Sports/">Sports</a><i class="icon fa fa-angle-right"></i><a class="article-category-link" href="/categories/Sports/Football/">Football</a></p>
-                            <p class="item-title"><a href="/2013/07/13/Test-Post/" class="title">Hello World</a></p>
-                            <p class="item-date"><time datetime="2013-07-13T10:46:25.000Z" itemprop="datePublished">2013-07-13</time></p>
                         </div>
                     </li>
                 
@@ -411,7 +409,7 @@ dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
     <div class="widget-wrap widget-list">
         <h3 class="widget-title">archives</h3>
         <div class="widget">
-            <ul class="archive-list"><li class="archive-list-item"><a class="archive-list-link" href="/archives/2016/02/">February 2016</a><span class="archive-list-count">4</span></li><li class="archive-list-item"><a class="archive-list-link" href="/archives/2013/07/">July 2013</a><span class="archive-list-count">1</span></li></ul>
+            <ul class="archive-list"><li class="archive-list-item"><a class="archive-list-link" href="/archives/2016/02/">February 2016</a><span class="archive-list-count">6</span></li><li class="archive-list-item"><a class="archive-list-link" href="/archives/2013/07/">July 2013</a><span class="archive-list-count">1</span></li></ul>
         </div>
     </div>
 
